--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_token: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_TOKEN }}
           publish_dir: ./public
           external_repository: asAsadwS/asAsadwS.github.io
           cname: blog.asasadws.work.gd
